2004-07-20  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime.[ch]: 
	(gnome_vfs_mime_info_cache_reload),
	(gnome_vfs_mime_reload):
	Add cache flushing functions to module headers.

2004-07-20  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info-cache.c: 
	(gnome_vfs_mime_info_cache_init),
	(gnome_vfs_mime_info_cache_dir_out_of_date),
	(gnome_vfs_mime_info_cache_dir_defaults_list_out_of_date),
	(gnome_vfs_mime_info_cache_dir_init),:
	(gnome_vfs_mime_info_cache_dir_init_defaults_list),
	(gnome_vfs_mime_info_cache_dir_changed),
	(gnome_vfs_mime_info_cache_init_dir_lists),
	(gnome_vfs_mime_info_cache_update_dir_lists),
	(gnome_vfs_mime_info_cache_init),
	(gnome_vfs_mime_get_all_desktop_entries),
	(gnome_vfs_mime_get_default_desktop_entry):
	Refactor cache monitoring code to match discussed
	implementation plan, and add support for fam
	in addition to polling the files every 5 seconds.

Wed Jul 21 15:07:33 2004  Jonathan Blandford  <jrb@redhat.com>

	* libgnomevfs/gnome-vfs-mime-utils.h: move the comparison
	functions into a public header.

2004-07-20  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info-handlers.c: 
	When unable to guess an application's file loading
	capabilities from its Exec= line, assume it will
	accept uris. Also, remove the check for %k, because
	it was wrong.

2004-07-20  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info-handlers.c: 
	When unable to guess an application's file loading
	capabilities from its Exec= line, assume it will
	only accept one local file at a time. 

Mon Jul 19 18:48:26 2004  Jonathan Blandford  <jrb@gnome.org>

	* libgnomevfs/gnome-vfs-mime.c
	(gnome_vfs_mime_type_get_equivalence): fix stupid spelling error.

Mon Jul 19 18:42:58 2004  Jonathan Blandford  <jrb@gnome.org>

	* libgnomevfs/gnome-vfs-mime.c
	(gnome_vfs_mime_type_get_equivalance): New function.
	(gnome_vfs_mime_type_is_equal): New function.
